--- a/DataWarehouse/src/app/register/register.component.html
+++ b/DataWarehouse/src/app/register/register.component.html
@@ -1,4 +1,10 @@
-<h2>Register</h2>
+<div class="container-md">
+  <div class="row justify-content-md-center" style="margin-top: 150px">
+  <h2>Register</h2>
+</div>
+</div>
+
+<div class="row justify-content-md-center">
 <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
   <div class="form-group">
     <div class="form-group">
@@ -25,3 +31,4 @@
     </div>
   </div>
 </form>
+</div>
