--- a/DataWarehouse/src/app/login/login.component.html
+++ b/DataWarehouse/src/app/login/login.component.html
@@ -1,4 +1,10 @@
-<h2>Login</h2>
+<div class="container-md">
+  <div class="row justify-content-md-center" style="margin-top: 150px">
+  <h2>Login</h2>
+</div>
+</div>
+
+<div class="row justify-content-md-center">
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
   <div class="form-group">
     <label for="email">Email</label>
@@ -22,3 +28,4 @@
     <a routerLink="/register" class="btn btn-link">Register</a>
   </div>
 </form>
+</div>
