--- a/DataWarehouse/src/app/home/home.component.html
+++ b/DataWarehouse/src/app/home/home.component.html
@@ -3,6 +3,24 @@
   <div class="row justify-content-md-center">
     <div class="col-md-8">
       <h2>Haus hinzufügen</h2>
+      <div class="form-group">
+        <label>Ort auswählen</label>
+        <select class="form-control" [(ngModel)]="selectedOrt">
+          <option *ngFor="let ort of orts" [ngValue]="ort">{{ort.ortsname}}</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label>Personen auswählen</label>
+        <ng-multiselect-dropdown
+          [placeholder]=""
+          [data]="persons"
+          [settings]="dropdownSettings"
+          (onSelect)="onItemSelect($event)"
+          (onSelectAll)="onSelectAll($event)"
+          (onDeSelect)="onItemDeselect($event)"
+        >
+        </ng-multiselect-dropdown>
+      </div>
       <form [formGroup]="houseForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
           <div class="form-group">
@@ -13,21 +31,6 @@
             <label for="housenummer">Hausnummer</label>
             <input type="number" formControlName="housenummer" class="form-control" />
           </div>
-          <div>
-            <button type="button" (click)="addPerson()" class="btn btn-primary">Neue Person</button>
-          </div>
-          <ng-container class="form-group" formArrayName="persons">
-            <div *ngFor="let _ of getPersons.controls; index as i;">
-              <ng-container [formGroupName]="i">
-                <h3></h3>
-                <input class="form-control" formControlName="vorname" placeholder="Vorname">
-                <h3></h3>
-                <input class="form-control" formControlName="nachname" placeholder="Nachname">
-                <h3></h3>
-                <button class="btn btn-danger" (click)="removePerson(i)">X</button>
-              </ng-container>
-            </div>
-          </ng-container>
         </div>
         <div class="row">
           <div class="col align-self-end">
