--- a/DataWarehouse/src/app/ort/ort.component.html
+++ b/DataWarehouse/src/app/ort/ort.component.html
@@ -2,6 +2,12 @@
   <div class="row justify-content-md-center" style="margin-top: 150px">
     <h2>Ort</h2>
   </div>
+  <div class="row justify-content-md-center">
+    <div *ngIf="message" class="alert alert-success" role="alert">
+      {{ message }}
+    </div>
+  </div>
+
 
   <div class="row justify-content-md-center">
     <form *ngIf="!update" [formGroup]="ortForm" (ngSubmit)="onSubmit()">
